--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  rodbagg
 
 # Build settings
 #theme: minima
+#theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
