--- a/_config.yml
+++ b/_config.yml
@@ -19,18 +19,17 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Zebrium Docs
-email: rod@zebrium.com
+email: info@zebrium.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Observability Data Platform for modern software deployments
+  Autonomous monitoring that deploys without customization and reliably catches problems without human expertise.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-github_username:  rodbagg
+#github_username:  jekyll
 
 # Build settings
-#theme: minima
+# theme: minima
 #theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
 plugins:
