--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Zebrium Docs
 email: info@zebrium.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Observability Data Platform for modern software deployments
+  Observability Data Platform for modern software deployments. 
   Autonomous monitoring that deploys without customization and reliably catches problems without human expertise.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
