--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,10 @@ remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-feed
 
+aux_links:
+  "Back to Zebrium":
+    - "//zebrium.com"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
