--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,10 @@ plugins:
   - jekyll-feed
 
 aux_links:
-  "Back to Zebrium":
+  "Back to zebrium.com":
     - "https://www.zebrium.com"
+
+logo: "/assets/images/Logo_bolder_name.png"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
